# angee-django

./: .dockerignore  .gitignore  .mcp.json  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  tsconfig.base.json  vitest.shared.ts
.agents/: README.md  handover-agent-chat.md
.agents/agents/: architecture-reviewer.md  architecture-reviewer.toml  django-reviewer.md  django-reviewer.toml  plan-reviewer.md  plan-reviewer.toml  react-reviewer.md  react-reviewer.toml
.agents/commands/: lift.md  pull.md  push.md  workspace.md
.agents/handovers/: react-consistency-cleanup.md
.agents/notes/: chat-ui-library-evaluation.md  composer-on-django-migrations.md  edge-ingress-host-side.md  grouped-list-odoo-parity.md  preview-markdown-code-split.md  rebac-stays-out-of-angee.md  refine-adoption-library-leaning-findings.md  refine-evaluation.md  visual-parity-findings.md
.agents/notes/final-review/: claude-arch.md  claude-django.md  codex-arch.md  codex-django.md  gemini-arch.md  gemini-django.md
.agents/notes/lift-auth-graphql/: STATE.md
.agents/notes/reviews/: FILES_BRIEF.md  REVIEW_BRIEF.md  SYNTHESIS.md  SYNTHESIS_FILES.md  claude-files-mainloop-notes.md  claude-files-report.md  claude-mainloop-notes.md  claude-report.md  codex-files-report.md  codex-report.md  gemini-files-report.md  gemini-report.md
.agents/plans/: 2026-05-30-backend-foundation.md  2026-05-30-base-decomposition-p1-map.md  2026-05-30-followups.md  2026-05-30-review-fixes.md  acp-sdk-migration.md  addon-deletion-research-checklist.md  addon-page-dsl-dry-slices.md  agent-chat.md  agents-addon.md  chat-affordances-assistant-ui.md  clean-build-schema-emit.md  connect-addon.md  console-design-system.md  console-shell-and-design-consistency.md  data-management-odoo-parity.md  dependency-upgrade-plan.md  dry-architecture-audit-fix-plan.md  dry-refactor-execution-todo.md  fork-a1-refine-package-split.md  fork-a4-field-classifier-crossrepo.md  fork-a5-downstream-codegen.md  fork-a6-mcp-authz-deferred.md  frontend-dry-followup.md  frontend-oidc-integrate-split.md  frontend-stack-upgrade-popover-dry.md  harmonisation-cleanup-plan.md  hasura-row-resource-non-model.md  iam-roles-lift.md  impl-defaults-oauth-oidc-rebuild.md  integration-child-model-backends.md  integration-lift.md  integrations-board-draft-connect.md  knowledge-page-decomposition.md  library-leverage-research-checklist.md  listview-groupview-board-split.md  m2-aggregates.md  m2-dev-stack.md  m3-frontend-production.md  m3-frontend.md  marketplace-install-b.md  (+21 more)
.agents/plans/specs/: console-shell-spec.md  design-dry-spec.md  typography-sweep-plan.md  widget-control-spec.md  workbench-spec.md
.agents/proposals/: operator-file-tools.md
.agents/skills/angee-workspace/: SKILL.md
.agents/skills/pull/: SKILL.md
.agents/skills/push/: SKILL.md
.agents/skills/slice/: SKILL.md
.agents/skills/workspace/: SKILL.md
.agents/tools/: fidelity-capture.mjs  radius-codemod.mjs
.agents/workflows/: lift.js  research-sonnet.js
.codex/: config.toml
.github/workflows/: gitleaks.yml  no-private-paths.yml  publish-base-image.yml
.reference/base_old/: __init__.py  apps.py  asgi.py  consumers.py  discovery.py  mixins.py  models.py  settings.py  signals.py  urls.py  views.py
.reference/base_old/compose/: emission.py  pipeline.py  rebac.py
.reference/base_old/graphql/: crud.py  introspection.py  schema.py  subscriptions.py
.reference/base_old/management/: __init__.py
.reference/base_old/resources/: entries.py  exceptions.py  fetch.py  loader.py  managers.py  models.py  ordering.py  tiers.py  widgets.py
addons/angee/agents/: __init__.py  actor_resolvers.py  addon.toml  apps.py  backends.py  (+10 more)
angee/: addons.py  asgi.py  fs.py  paths.py  project.py  urls.py
angee/base/: __init__.py  actors.py  addon.toml  apps.py  asgi.py  autoconfig.py  deletion.py  discovery.py  emission.py  fields.py  impl.py  impl_types.py  mixins.py  models.py  net.py  numeric.py  refs.py  registry.py  serialization.py  signals.py  transitions.py
angee/compose/: addon.toml  appgraph.py  apps.py  autoconfig.py  composer.py  defaults.py  migrations.py  permissions.py  project.py  runtime.py  settings.py  web.py
angee/graphql/: __init__.py  access.py  actions.py  addon.toml  aggregates.py  apps.py  asgi.py  autoconfig.py  constants.py  crud.py  deletion.py  events.py  field_types.py  ids.py  impl.py  introspection.py  node.py  publishing.py  revisions.py  schema.py  sdl.py  subscriptions.py  urls.py  views.py  writes.py
angee/tasks/: __init__.py  addon.toml  autoconfig.py  celery.py  enqueue.py  locks.py
docker/: runtime-entrypoint.sh
docker/dev/: README.md  app-entrypoint.sh  docker-compose.yml  vite-entrypoint.sh
docs/: composer.md  features.md  glossary.md  guidelines.md  stack.md  vision.md
docs/backend/: guidelines.md
docs/frontend/: guidelines.md
docs/howto/: getstarted.md
docs/testing/: e2e.md
examples/notes-angee/: manage.py  settings.yaml
templates/: README.md
tests/: __init__.py  conftest.py  iam_app.py  iam_models.py  money_models.py  settings.py  test_addon_installer.py  test_addons.py  test_agent_stack_root_policy.py  test_agent_work_state_policy.py  test_agents.py  test_agents_graphql.py  test_aggregates.py  test_apps.py  test_asgi.py  test_audit_label_n1.py  test_catalogue_trait.py  test_compose.py  test_composition.py  test_computed_resource_metadata.py  test_connections.py  test_crud.py  test_csrf.py  test_delete_preview_tree.py  test_deletion.py  test_fields.py  test_fs.py  test_graphql.py  test_graphql_actions.py  test_graphql_views.py  test_grouping_contract.py  test_hasura_lines.py  test_hierarchy.py  test_iam.py  test_iam_colleagues.py  test_iam_company.py  test_iam_company_create_gate.py  test_iam_graphql.py  test_iam_identity.py  test_iam_permission_hub_graphql.py  (+67 more)
tests/chatterdemo/: models.py
tests/extcontrib/: apps.py  permissions.extends.zed
tests/hierdemo/: apps.py  models.py
tests/linesdemo/: models.py  permissions.zed
(+1241 files in other folders)
