[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "django-angee"
version = "0.1.0"
description = "Thin Django composition primitives for Angee applications."
license = "AGPL-3.0-or-later"
license-files = ["LICENSE"]
requires-python = ">=3.14"
dependencies = [
  "channels>=4.0",
  "cryptography>=44",
  "django-import-export>=4.3",
  "django-reversion>=5.1",
  "django-simple-history>=3.7",
  "django-sqids>=0.1",
  "django-zed-rebac[strawberry-django]>=0.11",
  # NOTE: developing against the local checkout (see [tool.uv.sources]) while a
  # rebac fix lands; switch back to the published pin once it ships.
  "django>=6.0",
  "pyjwt[crypto]>=2.12",
  "pyyaml>=6",
  "strawberry-graphql>=0.270",
  "strawberry-django-aggregates>=0.5.0",
  "strawberry-graphql-django>=0.86",
  "tablib>=3",
  "django-choices-field>=4.0.0",
  "django-yamlconf>=1.5.0",
  "django-environ>=0.12",
  "python-magic>=0.4.27",
  "mcp>=1.2",
  # ASGI server: serves the composed app (Django + channels WebSocket + the MCP
  # StreamableHTTP mount). uvicorn sends the ASGI lifespan that runs the mount's
  # session manager; [standard] adds WebSocket and --reload support for dev.
  "uvicorn[standard]>=0.30",
  "fastmcp>=2.14.7,<2.15",
  "anthropic>=0.109.2",
  "openai>=2.43.0",
]

[dependency-groups]
dev = [
  # Test-only: channels.testing imports daphne (ChannelsLiveServerTestCase). It is
  # not a runtime dependency — Angee serves with uvicorn (see [project.dependencies]).
  "daphne>=4.0",
  "faker>=30.0",
  "mypy>=1.10",
  "pytest>=8.0",
  "pytest-django>=4.8",
  "ruff>=0.15.12",
  "vulture>=2.16",
]

[tool.uv.sources]
# Developing against the local django-zed-rebac checkout while a create-gating fix
# lands; switch back to the published pin once it ships.
# django-zed-rebac = { path = "../django-zed-rebac", editable = true }
strawberry-graphql = { path = "../strawberry" }
strawberry-graphql-django = { path = "../strawberry-django" }

[tool.hatch.build.targets.wheel]
# Two source roots merge into the one `angee` PEP 420 namespace: the framework
# core at ./angee, the base addons at ./addons/angee. `dev-mode-dirs` pins both
# roots on the editable path — hatchling otherwise drops the repo-root entry, so
# `angee.base` would not resolve when `manage.py` runs from the example dir.
packages = ["angee", "addons/angee"]
dev-mode-dirs = [".", "addons"]
artifacts = [
  "angee/**/*.csv",
  "angee/**/*.pyi",
  "angee/**/*.typed",
  "angee/**/*.yaml",
  "angee/**/*.yml",
  "angee/**/*.zed",
  "addons/angee/**/*.csv",
  "addons/angee/**/*.pyi",
  "addons/angee/**/*.typed",
  "addons/angee/**/*.yaml",
  "addons/angee/**/*.yml",
  "addons/angee/**/*.zed",
]

[tool.hatch.build.targets.sdist]
only-include = [
  "AGENTS.md",
  "LICENSE",
  "README.md",
  "addons",
  "angee",
  "docs",
  "examples",
  "pyproject.toml",
  "tests",
  "uv.lock",
]

[tool.pytest.ini_options]
cache_dir = ".pytest_cache"
DJANGO_SETTINGS_MODULE = "tests.settings"
python_files = ["test_*.py"]
testpaths = ["tests", "addons/angee/resources/tests"]
pythonpath = [".", "addons", "examples/notes-angee/addons"]
addopts = "-ra --strict-markers --import-mode=importlib"

[tool.ruff]
line-length = 120
target-version = "py314"
cache-dir = ".ruff_cache"
# First-party roots so isort classifies `angee.*` correctly across both source
# roots (framework at ., base addons at addons/) and the example project.
src = [".", "addons", "examples/notes-angee/addons"]
exclude = [
  ".angee",
  ".git",
  ".mypy_cache",
  ".reference",
  ".pytest_cache",
  ".ruff_cache",
  ".venv",
  "node_modules",
  # Generated runtime is emitted output, not source: concrete models and
  # Django-authored migrations live here. The composer owns its shape; lint
  # the abstract sources instead.
  "**/runtime",
]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.14"
cache_dir = ".mypy_cache"
explicit_package_bases = true
files = ["angee", "addons/angee"]
ignore_missing_imports = true
mypy_path = [".", "addons"]
warn_unused_ignores = true

[tool.vulture]
paths = ["angee", "addons/angee", "examples/notes-angee/addons", "tests"]
exclude = [
  "*/runtime/*",
]
ignore_names = [
  "*_tables",
]
min_confidence = 80
